# vanity

./: LICENCE.md  README.md  pyproject.toml
vanity/: __init__.py  model.py
