[tool.poetry]
name = "vanity"
version = "0.1.0"
description = ""
authors = ["Daniel C. Jones <djones3@fredhutch.org>"]

[tool.poetry.dependencies]
python = "^3.10"
anndata = "^0.8.0"
jax = "^0.3.17"
optax = "^0.1.3"
tensorflow-probability = "^0.18.0"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
